# lmro_2phase_inverse

./: .gitignore  Gaussian_Redox_FullRange_D100xSlow_검증.md  Gaussian_Redox_Phase_dQdV_검증.md  README.md  build_idaklu_deps.sh  native_2phase_검증.md  pyproject.toml  setup_env.sh  수정.md  충방검증.md
configs/: env.yaml  halfcell_lmr_base.yaml  stage0_smoke.yaml  stage1_fit_tanh.yaml  stage1_fit_tanh_quicktest.yaml  stage2_generate_synthetic.yaml  stage3_train_inverse.yaml  stage4_infer_validate.yaml  toyo_ascii.yaml
data/: fit_results_log.txt
data/fit_results/spme_2phase/: best_params.json  comparison.json  fit_history.jsonl  피팅_결과_리포트.md
data/fit_results/stage1_gaussianc2m/: best_params.json  comparison.json  fit_history.jsonl
data/generated_initial_condition/: README.md
data/generated_initial_condition/reports/: Gaussian_C2m_LowBroad2x_D100xSlow_검증.md  Gaussian_Redox_FullRange_OCP_검증.md  Gaussian_Redox_SwappedCenters_D100xSlow_검증.md  동일반경_확산계수_피크거동_검증.md  최종_InitialCondition_Report.md  충방전_생성_루틴_정리.md  파라미터_수렴_과정_리포트.md
data/generated_initial_condition/scripts/: generate_toyo_native_2phase_sample.py
scripts/: 00_smoke_test_pybamm_halfcell.py  01_parse_toyo_ascii.py  02_fit_tanh_ocp.py  03_generate_synthetic_dataset.py  04_train_inverse_model.py  05_infer_lmr_profile.py  06_forward_validate.py  07_generate_report.py  analyze_native_2phase_sample.py  generate_convergence_report.py  generate_lmr_dfn_2phase_sample.py  generate_lmr_fit_report.py  generate_spme_fit_report.py  generate_toyo_sech2_pybamm_sample.py  run_dfn_2phase_fit.py  run_dfn_2phase_fit_and_report.py  run_lmr_2phase_fit.py  run_lmr_fit_and_report.py  run_native_2phase_fit.py  run_spme_2phase_fit.py  run_stage1_fit.py
scripts/patches/: idaklu_stub.py  pybammsolvers_init.py
src/lmro2phase/: __init__.py
src/lmro2phase/cli/: __init__.py  commands.py
src/lmro2phase/features/: capacity_axis.py  differential_features.py  normalization.py
src/lmro2phase/fitting/: stage1_objective.py  (+1 more)
tests/: test_inverse_model_overfit.py  test_ocp_grid.py  test_ocp_tanh.py  test_profile_resampling.py  test_stage1_objective.py  test_toyo_parser.py
(+90 files in other folders)
