[project]
name = "lmro-2phase-inverse"
version = "0.1.0"
description = "LMR 2-phase inverse modeling pipeline: TOYO cycler data → phase parameters via PyBaMM + deep learning"
requires-python = ">=3.11"

dependencies = [
  "pybamm>=26.4,<27",
  "numpy",
  "scipy",
  "pandas",
  "polars",
  "pyarrow",
  "zarr",
  "h5py",
  "scikit-learn",
  "torch",
  "lightning",
  "optuna",
  "matplotlib",
  "pydantic>=2.0",
  "omegaconf",
  "tqdm",
  "charset-normalizer",
]

[project.scripts]
lmro-smoke = "lmro2phase.cli.commands:smoke"
lmro-parse = "lmro2phase.cli.commands:parse_toyo"
lmro-fit-ocp = "lmro2phase.cli.commands:fit_ocp"
lmro-generate = "lmro2phase.cli.commands:generate_synthetic"
lmro-train = "lmro2phase.cli.commands:train_inverse"
lmro-infer = "lmro2phase.cli.commands:infer_profile"
lmro-validate = "lmro2phase.cli.commands:forward_validate"
lmro-report = "lmro2phase.cli.commands:generate_report"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ipykernel",
  "jupyterlab",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=68,<82"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
